Fix dark mode ThreadCard hover

--- a/src/core/components/ThreadCard/ThreadCard.module.css
+++ b/src/core/components/ThreadCard/ThreadCard.module.css
@@ -1,11 +1,23 @@
-.wrapper {
+.wrapper_light {
   display: flex;
   width: 100%;
   height: auto;
   cursor: pointer;
 }
 
-.wrapper:hover {
+.wrapper_light:hover {
   background-color: #f8f9fa;
+  border-radius: 10px;
+}
+
+.wrapper_dark {
+  display: flex;
+  width: 100%;
+  height: auto;
+  cursor: pointer;
+}
+
+.wrapper_dark:hover {
+  background-color: #161616;
   border-radius: 10px;
 }
